--- a/FaceBookProject/Views/Home/SearchUser.cshtml
+++ b/FaceBookProject/Views/Home/SearchUser.cshtml
@@ -11,7 +11,7 @@
                 {
                     <div class="col-6 offset-3 bg-white rounded position-relative px-4 py-3 my-2">
                         <div class="d-flex align-items-center w-100">
-                            <img src="~/assets/img/@user.Albums.FirstOrDefault(a=>a.Name == "Profile").Images.FirstOrDefault(i=>i.IsProfilePhoto).Picture" width="100" height="100" class="rounded-circle" alt="profile" />
+                            <img src="~/assets/img/@user.Profile" width="100" height="100" class="rounded-circle" alt="profile" />
                             <div class="mx-3">
                                 <a asp-controller="Profile" asp-action="Index" asp-route-id="@user.Id" class="text-dark">@user.FirstName @user.LastName</a>
                                 <p class="text-muted">Arkadas</p>
@@ -36,7 +36,6 @@
                                     </a>
                                 </div>
                             }
-
                             else
                             {
                                 <div class="user-alert mx-4">
@@ -47,11 +46,11 @@
                         }
                         else
                         {
-                    <div class="user-alert mx-4">
-                        <a data-id="@user.Id" class="btn btn-secondary p-2 rounded-circle">
-                            <i class="fab fa-facebook-messenger"></i>
-                        </a>
-                    </div>
+                            <div class="user-alert mx-4">
+                                <a data-id="@user.Id" class="btn btn-secondary p-2 rounded-circle">
+                                    <i class="fab fa-facebook-messenger"></i>
+                                </a>
+                            </div>
                         }
                     </div>
                 }
