--- a/FaceBookProject/Views/Profile/Index.cshtml
+++ b/FaceBookProject/Views/Profile/Index.cshtml
@@ -26,7 +26,7 @@
                                 <li class="me-2">
                                     <p class="text-white my-0">@Model.SearchedUser.Friends.Count() arkadas</p>
                                 </li>
-                                @if (Model.SearchedUser.UserName != User.Identity.Name)
+                                @if (!(Model.SearchedUser.UserName != User.Identity.Name || Model.MutualFriends.Count() > 0))
                                 {
                                     <li class="me-2">
                                         <p class="text-white my-0">•</p>
@@ -50,17 +50,17 @@
                     </div>
                     @if (Model.SearchedUser.UserName == User.Identity.Name)
                     {
-                <div class="butons d-flex flex-column align-items-end">
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary my-2">
-                        <i class="fas fa-plus"></i>
-                        Hikayeye Ekleme yap
-                    </button>
-                    <button type="button" class="btn btn-secondary my-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <i class="fas fa-plus"></i>
-                        Profili Duzenle
-                    </button>                   
-                </div>
+                        <div class="butons d-flex flex-column align-items-end">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary my-2">
+                                <i class="fas fa-plus"></i>
+                                Hikayeye Ekleme yap
+                            </button>
+                            <button type="button" class="btn btn-secondary my-2 modal-operations">
+                                <i class="fas fa-pen"></i>
+                                Profili Duzenle
+                            </button>
+                        </div>
                     }
                     else
                     {
@@ -248,14 +248,14 @@
                     </li>
                     @foreach (var friendship in Model.SearchedUser.Friends)
                     {
-                <li class="col-4 p-2">
-                    <a href=""> <img src="~/assets/img/@friendship.Friend.Profile" width="125" height="125" alt="profile" /> </a>
-                    <p class="m-0"><a href="" class="text-white small">@friendship.Friend.FirstName @friendship.Friend.LastName</a></p>
-                    @if (friendship.Friend.Friends.Count(f => Model.User.Friends.FirstOrDefault(s => s.FriendId == f.FriendId) != null) != 0)
-                    {
-                        <small class="text-muted">@(friendship.Friend.Friends.Count(f => Model.User.Friends.FirstOrDefault(s => s.FriendId == f.FriendId) != null)) ortak arkadaş</small>
-                    }                    
-                </li>
+                        <li class="col-4 p-2">
+                            <a asp-controller="Profile" asp-action="Index" asp-route-id="@friendship.Friend.Id"> <img src="~/assets/img/@friendship.Friend.Profile" width="125" height="125" alt="profile" /> </a>
+                            <p class="m-0"><a asp-controller="Profile" asp-action="Index" asp-route-id="@friendship.Friend.Id" class="text-white small">@friendship.Friend.FirstName @friendship.Friend.LastName</a></p>
+                            @if (friendship.Friend.Friends.Count(f => Model.User.Friends.FirstOrDefault(s => s.FriendId == f.FriendId) != null) != 0)
+                            {
+                                <small class="text-muted">@(friendship.Friend.Friends.Count(f => Model.User.Friends.FirstOrDefault(s => s.FriendId == f.FriendId) != null)) ortak arkadaş</small>
+                            }
+                        </li>
                     }
                 </ul>
 
@@ -340,23 +340,23 @@
     </div>
 </section>
 
-
-
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal" id="exampleModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Profili Düzenle</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <a class="modal-operations btn btn-outline-danger"><i class="fas fa-times"></i></a>
             </div>
             <div class="modal-body">
                 <div class="d-flex flex-column justify-content-center align-items-center">
                     <div class="d-flex justify-content-between w-100 my-3">
                         <h5>Profil Resmi</h5>
-                        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                            Duzenle
-                        </button>
+                        <div class="modal-body d-flex justify-content-end" method="post" asp-controller="Profile" asp-action="EditProfileImage">
+                            <label>
+                                <button type="button" class="btn btn-outline-success profile-operations">Ekle</button>
+                            </label>
+                        </div>
                     </div>
                     <img src="~/assets/img/@Model.SearchedUser.Profile" alt="profile" width="150" height="150" class="rounded-circle" />
                 </div>
@@ -365,14 +365,13 @@
                 <div class="d-flex flex-column justify-content-center align-items-center">
                     <div class="d-flex justify-content-between align-items-center w-100 my-3">
                         <h5>Kapak Fotoğrafı</h5>
-                        <form class="modal-body d-flex justify-content-end" method="post" asp-controller="Profile" asp-action="EditProfileImage">
-                                <label>
-                                    <input asp-for="Image.Photo" hidden class="form-control" />
-                                    <a class="btn btn-outline-success">Ekle</a>
-                                </label>
-                        </form>
+                        <div class="modal-body d-flex justify-content-end" method="post" asp-controller="Profile" asp-action="EditCoverImage">
+                            <label>
+                                <button type="button" id="profile" class="btn btn-outline-success cover-operations">Ekle</button>
+                            </label>
+                        </div>
                     </div>
-                    <img src="~/assets/img/@Model.SearchedUser.Profile" alt="profile" width="450" height="250" class="rounded" />
+                    <img src="~/assets/img/@Model.SearchedUser.Cover" alt="profile" width="700" height="300" class="rounded" />
                 </div>
             </div>
             <div class="modal-body">
@@ -381,40 +380,71 @@
                         <h5>Biyografi</h5>
                         <a class="btn btn-outline-primary">Ekle</a>
                     </div>
-                    <form id="biography">
+                    <div id="biography">
                         <textarea class="form-control"></textarea>
-                    </form>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary modal-operations">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
 </div>
 
-
-<!-- Modal -->
-<!--<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
+<!-- Profile Edit -->
+<div class="modal" id="profileImage">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-dark text-white">
             <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Profil Resmini Güncelle</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h5 class="modal-title">Profil Resmini Güncelle</h5>
+                <a class="btn btn-outline-light profile-operations"><i class="fas fa-times"></i></a>
             </div>
-            <form class="modal-body" method="post" asp-controller="Profile" asp-action="EditProfileImage">
-                <div>
-                    <label>
-                        <input asp-for="Image.Photo" hidden class="form-control" />
-                        <a class="btn btn-outline-success">Guncelle</a>
-                    </label>
+            <form enctype="multipart/form-data" method="post">
+                <div class="modal-body" id="editprofile">
+                    <div class="form-row">
+                        <div class="col-12 mb-3">
+                            <label>
+                                <input asp-for="SearchedUser.ProfilePhoto" hidden class="form-control" />
+                                <a class="btn btn-outline-success"><i class="fas fa-image"></i></a>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button asp-controller="Profile" asp-action="EditProfileImage" asp-route-id="@Model.SearchedUser.Id" type="submit" class="btn btn-primary">Save</button>
+                        <button type="button" class="btn btn-secondary profile-operations">Close</button>
+                    </div>
                 </div>
             </form>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Save</button>
-            </div>
         </div>
     </div>
-</div>-->
+</div>
+
+<!-- Cover Edit -->
+<div class="modal" id="coverImage">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-dark text-white">
+            <div class="modal-header">
+                <h5 class="modal-title">Kapak Resmini Güncelle</h5>
+                <a class="cover-operations btn btn-outline-light"><i class="fas fa-times"></i></a>
+            </div>
+            <form enctype="multipart/form-data" method="post">
+                <div class="modal-body" id="editprofile">
+                    <div class="form-row">
+                        <div class="col-12 mb-3">
+                            <label>
+                                <input asp-for="SearchedUser.CoverPhoto" hidden class="form-control" />
+                                <a class="btn btn-outline-success"><i class="fas fa-image"></i></a>
+                            </label>
+                        </div>
+                        <button asp-controller="Profile" asp-action="EditCoverImage" asp-route-id="@Model.SearchedUser.Id" type="submit" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary cover-operations">Close</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
