--- a/FaceBookProject/Views/Home/SearchUser.cshtml
+++ b/FaceBookProject/Views/Home/SearchUser.cshtml
@@ -10,7 +10,7 @@
                 @foreach (var user in Model.AllUsers)
                 {
                     <div class="col-6 offset-3 bg-white rounded position-relative px-4 py-3 my-2">
-                        <div class="d-flex align-items-center w-100">
+                        <div class="d-flex align-items-center">
                             <img src="~/assets/img/@user.Profile" width="100" height="100" class="rounded-circle" alt="profile" />
                             <div class="mx-3">
                                 <a asp-controller="Profile" asp-action="Index" asp-route-id="@user.Id" class="text-dark">@user.FirstName @user.LastName</a>
