--- a/FaceBookProject/Views/Shared/_AcceptSuggest.cshtml
+++ b/FaceBookProject/Views/Shared/_AcceptSuggest.cshtml
@@ -1,4 +1,20 @@
-﻿
+﻿@model HomeVM
 @{
     Layout = null;
+}
+
+@foreach (var friend in Model.User.Friends)
+{
+    <li class="list-group-item bg-transparent p-0 border-0">
+        <a id="openChat" data-id="@friend.Friend.Id" class="btn option rounded d-flex align-items-center px-2 py-3">
+            <div class="position-relative">
+                <img src="~/assets/img/@friend.Friend.Profile" width="40" height="40" class="rounded-circle"
+                     alt="">
+                <span class="position-absolute bottom-0 start-100 translate-middle p-1 bg-success border border-light rounded-circle">
+                    <span class="visually-hidden">New alerts</span>
+                </span>
+            </div>
+            <h6 class="text-white mx-2">@friend.Friend.FirstName @friend.Friend.LastName</h6>
+        </a>
+    </li>
 }
