--- a/FaceBookProject/Views/Home/SearchUser.cshtml
+++ b/FaceBookProject/Views/Home/SearchUser.cshtml
@@ -13,7 +13,7 @@
                         <div class="d-flex align-items-center">
                             <img src="~/assets/img/@user.Profile" width="100" height="100" class="rounded-circle" alt="profile" />
                             <div class="mx-3">
-                                <a asp-controller="Profile" asp-action="Index" asp-route-id="@user.Id" class="text-dark">@user.FirstName @user.LastName</a>
+                                <a asp-controller="Profile" asp-action="Index" asp-route-id="@user.Id" class="text-dark text-hover-underline">@user.FirstName @user.LastName</a>
                                 <p class="text-muted">Arkadas</p>
                                 <p class="text-muted mb-0"><i class="fas fa-user-check"></i> 8 ortak arkadaş</p>
                                 <p class="text-muted mb-0">KEF ELE .SIRKETI'da FSO</p>
