--- a/FaceBookProject/Views/Shared/_AddEmotion.cshtml
+++ b/FaceBookProject/Views/Shared/_AddEmotion.cshtml
@@ -7,5 +7,5 @@
     <input asp-for="@Model.Behavior.Id" hidden />
     is
     <img src="~/assets/img/emotions/@Model.Behavior.Icon" width="20" height="20" class="emotion-icon" /> feeling
-    <a class="text-hover-underline text-white feeling"> @Model.Behavior.Text</a>
+    <a href="" class="text-hover-underline text-white feeling emotion-open"> @Model.Behavior.Text</a>
 </label>
